TODO:
Unlocking should not gray out vars in cont. mode
Reset should work with unlock

Fragments:
Clean up:
- Experimental
Add examples with Spudsville, 4-point, ...

02-09-11 [MHC]
Changed to Quilez soft-shadow which worked better than my own similar approach.
Fixed a bug in the shadow dir calculation.

28-07-11 [MHC]
BugFix: [3] Tile Render: only works in automatic mode.
BugFix: Using mouse and key movement at the same time, would result in distance between eye and target getting smaller and smaller.
Compiler warnings are now shown in output, also if there is no errors.

27-07-11 [MHC]
Added implementation of locking (changing uniforms to 'const' variables)
Fixed FPS for >500 ms renders
Updated indentation

19-07-11 [MHC]
Added autosave option to High Resolution Render Dialog

02-07-11 [MHC]
BugFix: Resize of windows in preview mode should update aspect ratio.
BugFix: specular exponent = 0
Changed MouseWheel controls
Cleaned up raytracer (no more normalDetail settings)
Added a port of Fractal Labs (Subblues) raytracer. Just include "Subblue-Raytracer.frag" instead of "DE-Raytracer.frag"
Added GraphPlotter.frag example

20-06-11 [MHC]
New OutputDialog (in progress)
Corrected some bugs in the raytracer.
Added reflections (does not work well with fog)
Merged with David Burnetts Mac fixes

13-06-11 [MHC]
[5h]
Added sliders to user parameter groups.
Fixed sticky keys
Added '#define providesInit', '#define providesColor'
Fixed TileRender bug on Mac (Thanks to David Burnett) - probably also fixes occasional crash on Win.
Raytracer updates (reflections, hard shadows)

04-05-11 [MHC]
[3h] 
Added KaliSet, BurningShip, Spudsville
Added 2DJulia.frag and Complex.frag to make 2D fractals easier.
Added padlock icon (in progress)

01-04-11 [MHC]
Shadows (can be improved)
New AO method (similar to Rrola/Subblue - sample 5 positions along normal for proximity).
Now disables uniformes which are not used in shader.